Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Part__c/BD_Extended_Warranty_Part__c.object-meta.xml
<CustomObject>
    <description>Extended Warranty Parts are mappings of Equipment Products to their Child Parts that should be covered under an Extended Warranty.</description>
    <label>Extended Warranty Part</label>
    <nameField>
        <displayFormat>EWP-{00000000}</displayFormat>
        <label>Extended Warranty Part Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Extended Warranty Parts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>