Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Part__c/fields/BD_Equipment_Product__c.field-meta.xml
<CustomField>
    <fullName>BD_Equipment_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Equipment Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Extended Warranty Parts</relationshipLabel>
    <relationshipName>Extended_Warranty_Equipment</relationshipName>
    <type>Lookup</type>
</CustomField>