Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Part__c/fields/BD_Extended_Months__c.field-meta.xml
<CustomField>
    <fullName>BD_Extended_Months__c</fullName>
    <label>Extended Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>