Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Part__c/fields/BD_Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>BD_Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Deleted</label>
    <type>Checkbox</type>
</CustomField>