Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Part__c/fields/BD_Last_Txn_Number__c.field-meta.xml
<CustomField>
    <fullName>BD_Last_Txn_Number__c</fullName>
    <label>Last Txn Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>