Perkin-UAT/force-app/main/default/objects/BD_Extended_Warranty_Part__c/fields/BD_Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>BD_Sales_Org__c</fullName>
    <label>Sales Org</label>
    <length>4</length>
    <type>Text</type>
</CustomField>